# Random-Hentai-Plugin

./: .gitignore  CMakeLists.txt  README.md  RandomHentai  RandomHentai.yml  texture_v.cg
include/: common.h  dir.h  hentai.h  jpeg.h  util.h
src/: RandomHentai.c  csc.c  csc.h  dir.c  draw.c  draw.h  hentai.c  jpeg.c  jpeg.h  main.c  util.c
